2009-09-01  Glenn Morris  <rgm@gnu.org>

	* gnus-salt.el (gnus-pick-mouse-pick-region): Use forward-line rather
	than goto-line.

2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* spam.el (spam-ifile-path, spam-bogofilter-path, spam-sa-learn-path)
	(spam-ifile-database-path, spam-bsfilter-path, spam-spamassassin-path):
	* nnmail.el (nnmail-spool-file, nnmail-fix-eudora-headers):
	* nnir.el (nnir-swish-e-index-file):
	* gnus-sum.el (gnus-summary-delete-marked-as-read)
	(gnus-summary-delete-marked-with, gnus-summary-mark-as-unread-forward)
	(gnus-summary-mark-as-unread-backward, gnus-summary-mark-as-unread):
	* gnus-msg.el (gnus-inews-mark-gcc-as-read):
	* gnus-art.el (gnus-article-hide-pgp-hook, gnus-treat-strip-pgp)
	(gnus-treat-display-xface): Add Emacs version of obsolescence.

2009-08-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-attach-file, mml-attach-buffer, mml-attach-external):
	Don't save excursion.

2009-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnheader.el (nnheader-find-file-noselect):
	* mm-util.el (mm-insert-file-contents):
	Use (default-value 'major-mode) instead of default-major-mode.

2009-08-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnrss.el (nnrss-request-article): Avoid default-fill-column.

2009-08-25  Glenn Morris  <rgm@gnu.org>

	* nnir.el (top-level): Don't require cl at run-time.
	(nnir-run-waissearch, nnir-run-swish-e, nnir-run-hyrex):
	Replace cl-function substitute with gnus-replace-in-string.
	(nnir-run-waissearch, nnir-run-swish++, nnir-run-swish-e)
	(nnir-run-hyrex, nnir-run-namazu): Replace cl-function sort* with sort.
	(nnir-run-find-grep): Replace cl-functions find-if and subseq with
	simplified expansions.

2009-08-22  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (gnus-button-patch): Use forward-line rather than
	goto-line.

2009-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-safe-html-newsgroups): New user option.

	* gnus-art.el (gnus-bind-safe-url-regexp): New macro.